Fixed u bug with images not aligning correctly and fixed some spelling mistakes.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -766,6 +766,8 @@ nav {
     #printer-main #content .img-float-right {
       float: right;
       width: 25vw; }
+    #printer-main #content .article {
+      overflow: auto; }
   #printer-main .content {
     padding-top: 50px; }
 
