--- a/sass/pages/_3d-skrivare.scss
+++ b/sass/pages/_3d-skrivare.scss
@@ -64,6 +64,10 @@
       float: right;
       width: 25vw;
     }
+
+    .article {
+      overflow: auto;
+    }
   }
 
   .content {
